syntax="proto3";
package services;

option go_package="../services";

message ProdRequest {
  int32 prod_id = 1;
  ProdAreas prod_area = 2;
}

message ProdResponse {
  int32 prod_stock = 1;
}

service ProdService {
  rpc GetProdStock(ProdRequest) returns (ProdResponse);
  rpc GetProdStocks(QuerySize) returns (ProdResponseList);
}


message QuerySize{
  int32 size = 1;
}

message ProdResponseList{
  repeated ProdResponse prodres = 1;
}

//枚举
enum ProdAreas {
  A = 0;
  B = 1;
  C = 2;
}


